--- a/packages/img-bg/index.html
+++ b/packages/img-bg/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Img-BG</title>
+    <title>Danphe Img-BG</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
